--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
                 <div class="swiper-slide"><img src="img/ApacheKafka.png" alt="Livro sobre apache Kafka da AluraBooks"></div>
                 <div class="swiper-slide"><img src="img/Javascript.png" alt="Livro sobre Javascript da AluraBooks"></div>
                 <div class="swiper-slide"><img src="img/Guia Front-end.png" alt="Livro sobre Front-End da AluraBooks"></div>
+                <div class="swiper-slide"><img src="img/ApacheKafka.png" alt="Livro sobre apache Kafka da AluraBooks"></div>
+                <div class="swiper-slide"><img src="img/Javascript.png" alt="Livro sobre Javascript da AluraBooks"></div>
+                <div class="swiper-slide"><img src="img/Guia Front-end.png" alt="Livro sobre Front-End da AluraBooks"></div>
             </div>
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div>
@@ -70,19 +73,34 @@
             <div class="card-descricao">
                 <div class="descricao">
                     <h3 class="descricao-titulo">Talvez você se interesse por...</h3>
-                    <h2 class="descricao-titlo-livro">Angular e Firebase </h2>
+                    <h2 class="descricao-titulo-livro">Angular e Firebase</h2>
                     <p class="descricao-texto">Construção de aplicação integrada ao Google</p>
                 </div>
                 <img src="./img/Angular.png" class="descricao-imagem">
-                </div>
-                <div class="botoes">
-                    <ul class="botoes">
-                        <li class="botoes-item"><img src="./img/Favoritos.png" alt="Favoritar livro"></li>
-                        <li class="botoes-item"><img src="./img/Sacola.png" alt="Adicionar à sacola"></li>
-                    </ul>
-                    <a href="#" class="botoes-ancora">Saiba mais</a>
-                </div>
             </div>
+            <div class="card-botoes">
+                <ul class="botoes">
+                    <li class="botoes-item">
+                        <img src="./img/Favoritos.png" alt="Favoritar livro">
+                    </li>
+                    <li class="botoes-item">
+                        <img src="./img/Sacola.png" alt="Adicionar à sacola">
+                    </li>
+                </ul>
+                <a href="#" class="botoes-ancora">Saiba mais</a>
+            </div>
+        </div>
+    </section>
+    <section class="topicos">
+        <h2 class="topicos-titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
+        <ul class="topicos-lista">
+            <li class="topicos-item">
+                <a href="#" class="topicos-link">Android</a>
+            </li>
+            <li class="topicos-item">
+                <a href="#" class="topicos-link">Marketing Digital</a>
+            </li>
+        </ul>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
